OERC-72: fixing z-index of navigation and pulling timezone dropdown to the right.

--- a/src/pretalx/static/agenda/scss/_agenda.scss
+++ b/src/pretalx/static/agenda/scss/_agenda.scss
@@ -47,7 +47,7 @@ header {
   display: flex;
   flex-direction: row;
   align-content: space-between;
-  z-index: 900;
+  /* z-index: 900; */
 
   a {
     font-size: 16px;
